# ollama-top

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spec.md
ollama_top/: __init__.py  __main__.py  collector.py  config.py  db.py  tui.py
