[project]
name = "ollama-top"
version = "0.1.0"
description = "A top-like terminal UI for monitoring a local Ollama instance"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.61.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "psutil>=5.9.0",
]

[project.scripts]
ollama-top = "ollama_top.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
